Додано розмітку сторінки з її наповненням

--- a/index.html
+++ b/index.html
@@ -3,13 +3,121 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WEBSTUDIO</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">WEBSTUDIO</a></li>
+          <li><a href="#" target="_blank">Studio</a></li>
+          <li><a href="#" target="_blank">Portfolio</a></li>
+          <li><a href="#" target="_blank">Contacts</a></li>
+        </ul>
+      </nav>
 
-    <main></main>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com" target="_blank"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li><a href="tel:+110001111111">+110001111111</a></li>
+        </ul>
+      </address>
+    </header>
 
-    <footer></footer>
+    <main>
+      <h1>
+        Effective Solutions <br />
+        for your business
+      </h1>
+
+      <button type="button">Order Service</button>
+      <ul>
+        <li>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business <br />
+            problem to walk away with the <br />
+            perfect and creative solution.
+          </p>
+        </li>
+        <li>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the <br />
+            brand's audience for the best price <br />
+            within the shortest possible time.
+          </p>
+        </li>
+        <li>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands with <br />
+            the strongest digital growth <br />
+            opportunities and minimize risk.
+          </p>
+        </li>
+        <li>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital <br />
+            experiences. We bring forth a deep <br />
+            passion for problem-solving.
+          </p>
+        </li>
+      </ul>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="images/Mark.jpg"
+              alt="Mark Guerrero"
+              width="100"
+              height="100"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/Tom.jpg" alt="Tom Ford" width="100" height="100" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="images/Kamila.jpg"
+              alt="Kamila Garcia"
+              width="100"
+              height="100"
+            />
+            <h3>Kamila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="images/Daniel.jpg"
+              alt="Daniel Wilson"
+              width="100"
+              height="100"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <a href="#">WEBSTUDIO</a>
+      <p>
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
