--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <header>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
-          <li><a href="#">WEBSTUDIO</a></li>
-          <li><a href="#" target="_blank">Studio</a></li>
-          <li><a href="#" target="_blank">Portfolio</a></li>
-          <li><a href="#" target="_blank">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
 
@@ -23,49 +23,45 @@
               >info@devstudio.com</a
             >
           </li>
-          <li><a href="tel:+110001111111">+110001111111</a></li>
+          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
 
     <main>
-      <h1>
-        Effective Solutions <br />
-        for your business
-      </h1>
+      <section>
+        <h1>Effective Solutions for your business</h1>
 
-      <button type="button">Order Service</button>
+        <button type="button">Order Service</button>
+      </section>
+      <h2>Features</h2>
       <ul>
         <li>
           <h3>Strategy</h3>
           <p>
-            Our goal is to identify the business <br />
-            problem to walk away with the <br />
+            Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
         </li>
         <li>
           <h3>Punctuality</h3>
           <p>
-            Bring the key message to the <br />
-            brand's audience for the best price <br />
+            Bring the key message to the brand's audience for the best price
             within the shortest possible time.
           </p>
         </li>
         <li>
           <h3>Diligence</h3>
           <p>
-            Research and confirm brands with <br />
-            the strongest digital growth <br />
+            Research and confirm brands with the strongest digital growth
             opportunities and minimize risk.
           </p>
         </li>
         <li>
           <h3>Technologies</h3>
           <p>
-            Design practice focused on digital <br />
-            experiences. We bring forth a deep <br />
-            passion for problem-solving.
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
           </p>
         </li>
       </ul>
