Фікси в 3-ій секції й навігації

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -72,7 +72,7 @@
         <ul>
           <li>
             <img
-              src="images/Mark.jpg"
+              src="./images/Mark.jpg"
               alt="Mark Guerrero"
               width="100"
               height="100"
@@ -81,13 +81,18 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/Tom.jpg" alt="Tom Ford" width="100" height="100" />
+            <img
+              src="./images/Tom.jpg"
+              alt="Tom Ford"
+              width="100"
+              height="100"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="images/Kamila.jpg"
+              src="./images/Kamila.jpg"
               alt="Kamila Garcia"
               width="100"
               height="100"
@@ -97,7 +102,7 @@
           </li>
           <li>
             <img
-              src="images/Daniel.jpg"
+              src="./images/Daniel.jpg"
               alt="Daniel Wilson"
               width="100"
               height="100"
