--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Kamila.jpg" alt="Kamila Garcia" width="264" />
+            <img
+              src="./images/Kamila.jpg"
+              alt="Camila Garcia
+
+            "
+              width="264"
+            />
             <h3>Kamila Garcia</h3>
             <p>Marketing</p>
           </li>
@@ -95,10 +101,9 @@
     </main>
 
     <footer>
-      <a href="#">WEBSTUDIO</a>
+      <a href="/index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
