--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             "
               width="264"
             />
-            <h3>Kamila Garcia</h3>
+            <h3>Сamila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -101,7 +101,7 @@
     </main>
 
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
