--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             "
               width="264"
             />
-            <h3>Сamila Garcia</h3>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
