--- a/index.html
+++ b/index.html
@@ -1,84 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <a href="./index.html" class="nav-logo">WebStudio</a>
+        <ul class="nav-list">
+          <li><a href="" class="link">Studio</a></li>
+          <li><a href="" class="link">Portfolio</a></li>
+          <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
 
       <address>
-        <ul>
+        <ul class="info">
           <li>
-            <a href="mailto:info@devstudio.com" target="_blank"
+            <a class="link" href="mailto:info@devstudio.com" target="_blank"
               >info@devstudio.com</a
             >
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
 
-    <main>
+    <main class="main">
       <section>
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="header-main">Effective Solutions for Your Business</h1>
 
-        <button type="button">Order Service</button>
+        <button class="button-main" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Features</h2>
+      <section class="section-features">
+        <h2 class="Features">Features</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="header-features">Strategy</h3>
+            <p class="text-features">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="header-features">Punctuality</h3>
+            <p class="text-features">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="header-features">Diligence</h3>
+            <p class="text-features">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="header-features">Technologies</h3>
+            <p class="text-features">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team">
+        <h2 class="main-header-team">Our Team</h2>
+        <ul class="team-list">
           <li>
             <img src="./images/Mark.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="header-team">Mark Guerrero</h3>
+            <p class="text-team">Product Designer</p>
           </li>
           <li>
             <img src="./images/Tom.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="header-team">Tom Ford</h3>
+            <p class="text-team">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -88,19 +98,22 @@
             "
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="header-team">Camila Garcia</h3>
+            <p class="text-team">Marketing</p>
           </li>
           <li>
             <img src="./images/Daniel.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="header-team">Daniel Wilson</h3>
+            <p class="text-team">UI Designer</p>
           </li>
         </ul>
       </section>
+      <section class="portfolio">
+        <h2 class="main-header-portfolio">Our Portfolio</h2>
+      </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
