--- a/index.html
+++ b/index.html
@@ -110,12 +110,74 @@
       </section>
       <section class="portfolio">
         <h2 class="main-header-portfolio">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="banking">
+            <img
+              src="./images/Banking App.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="banking-header">Banking App</h3>
+            <p class="banking-text">App</p>
+          </li>
+          <li class="payment">
+            <img
+              src="./images/Cashless Payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="payment-header">Cashless Payment</h3>
+            <p class="payment-text">Marketing</p>
+          </li>
+          <li class="mediation">
+            <img
+              src="./images/Meditation App.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3 class="mediation-header">Meditation App</h3>
+            <p class="mediation-text">App</p>
+          </li>
+          <li class="taxi">
+            <img
+              src="./images/Taxi Service.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3 class="taxi-header">Taxi Service</h3>
+            <p class="taxi-text">Marketing</p>
+          </li>
+          <li class="illustrations">
+            <img
+              src="./images/Screen Illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="illustrations-header">Screen Illustrations</h3>
+            <p class="illustrations-text">Design</p>
+          </li>
+          <li class="courses">
+            <img
+              src="./images/Online Courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="courses-header">Online Courses</h3>
+            <p class="courses-text">Marketing</p>
+          </li>
+        </ul>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="nav-logo">WebStudio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
