--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <ul class="portfolio-list">
           <li class="banking">
             <img
-              src="./images/Banking App.jpg"
+              src="./images/Banking-App.jpg"
               alt="Banking App"
               width="360"
               height="300"
@@ -123,7 +123,7 @@
           </li>
           <li class="payment">
             <img
-              src="./images/Cashless Payment.jpg"
+              src="./images/Cashless-Payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -133,7 +133,7 @@
           </li>
           <li class="mediation">
             <img
-              src="./images/Meditation App.jpg"
+              src="./images/Meditation-App.jpg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -143,7 +143,7 @@
           </li>
           <li class="taxi">
             <img
-              src="./images/Taxi Service.jpg"
+              src="./images/Taxi-Service.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -153,7 +153,7 @@
           </li>
           <li class="illustrations">
             <img
-              src="./images/Screen Illustrations.jpg"
+              src="./images/Screen-Illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -163,7 +163,7 @@
           </li>
           <li class="courses">
             <img
-              src="./images/Online Courses.jpg"
+              src="./images/Online-Courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
