ФІкси шрифтів, хедера(параметри в CSS),всіх секцій

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <body>
     <header class="header">
       <nav>
-        <a href="./index.html" class="nav-logo">WebStudio</a>
+        <a href="./index.html" class="nav-logo"
+          >Web <span class="studio">Studio</span></a
+        >
         <ul class="nav-list">
           <li><a href="" class="link">Studio</a></li>
           <li><a href="" class="link">Portfolio</a></li>
@@ -29,29 +31,29 @@
         </ul>
       </nav>
 
-      <address>
-        <ul class="info">
-          <li>
-            <a class="link" href="mailto:info@devstudio.com" target="_blank"
+      <address class="info">
+        <ul class="info-list">
+          <li class="link">
+            <a href="mailto:info@devstudio.com" target="_blank"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="link">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
 
     <main class="main">
-      <section>
+      <section class="main-section">
         <h1 class="header-main">Effective Solutions for Your Business</h1>
 
         <button class="button-main" type="button">Order Service</button>
       </section>
       <section class="section-features">
-        <h2 class="Features">Features</h2>
-        <ul>
+        <h2 class="features">Features</h2>
+        <ul class="features-list">
           <li>
             <h3 class="header-features">Strategy</h3>
             <p class="text-features">
@@ -123,8 +125,8 @@
               width="360"
               height="300"
             />
-            <h3 class="banking-header">Banking App</h3>
-            <p class="banking-text">App</p>
+            <h3 class="features-header">Banking App</h3>
+            <p class="features-text">App</p>
           </li>
           <li class="payment">
             <img
@@ -133,8 +135,8 @@
               width="360"
               height="300"
             />
-            <h3 class="payment-header">Cashless Payment</h3>
-            <p class="payment-text">Marketing</p>
+            <h3 class="features-header">Cashless Payment</h3>
+            <p class="features-text">Marketing</p>
           </li>
           <li class="mediation">
             <img
@@ -143,8 +145,8 @@
               width="360"
               height="300"
             />
-            <h3 class="mediation-header">Meditation App</h3>
-            <p class="mediation-text">App</p>
+            <h3 class="features-header">Meditation App</h3>
+            <p class="features-text">App</p>
           </li>
           <li class="taxi">
             <img
@@ -153,8 +155,8 @@
               width="360"
               height="300"
             />
-            <h3 class="taxi-header">Taxi Service</h3>
-            <p class="taxi-text">Marketing</p>
+            <h3 class="features-header">Taxi Service</h3>
+            <p class="features-text">Marketing</p>
           </li>
           <li class="illustrations">
             <img
@@ -163,8 +165,8 @@
               width="360"
               height="300"
             />
-            <h3 class="illustrations-header">Screen Illustrations</h3>
-            <p class="illustrations-text">Design</p>
+            <h3 class="features-header">Screen Illustrations</h3>
+            <p class="features-text">Design</p>
           </li>
           <li class="courses">
             <img
@@ -173,8 +175,8 @@
               width="360"
               height="300"
             />
-            <h3 class="courses-header">Online Courses</h3>
-            <p class="courses-text">Marketing</p>
+            <h3 class="features-header">Online Courses</h3>
+            <p class="features-text">Marketing</p>
           </li>
         </ul>
       </section>
