--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           >Web <span class="studio">Studio</span></a
         >
         <ul class="nav-list">
-          <li><a href="" class="link">Studio</a></li>
+          <li><a href="./index.html" class="link">Studio</a></li>
           <li><a href="" class="link">Portfolio</a></li>
           <li><a href="" class="link">Contacts</a></li>
         </ul>
@@ -183,7 +183,9 @@
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="nav-logo">WebStudio</a>
+      <a href="./index.html" class="nav-logo"
+        >Web <span class="footer-studio">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
