--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -30,7 +29,6 @@
           <li><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-
       <address class="info">
         <ul class="info-list">
           <li class="link">
@@ -44,11 +42,9 @@
         </ul>
       </address>
     </header>
-
     <main class="main">
       <section class="main-section">
         <h1 class="header-main">Effective Solutions for Your Business</h1>
-
         <button class="button-main" type="button">Order Service</button>
       </section>
       <section class="section-features">
@@ -87,7 +83,7 @@
       <section class="team">
         <h2 class="main-header-team">Our Team</h2>
         <ul class="team-list">
-          <li>
+          <li class="team-item">
             <img src="./images/Mark.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="header-team">Mark Guerrero</h3>
             <p class="text-team">Product Designer</p>
@@ -98,13 +94,7 @@
             <p class="text-team">Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./images/Kamila.jpg"
-              alt="Camila Garcia
-
-            "
-              width="264"
-            />
+            <img src="./images/Kamila.jpg" alt="Camila Garcia" width="264" />
             <h3 class="header-team">Camila Garcia</h3>
             <p class="text-team">Marketing</p>
           </li>
@@ -181,7 +171,6 @@
         </ul>
       </section>
     </main>
-
     <footer class="footer">
       <a href="./index.html" class="nav-logo"
         >Web <span class="footer-studio">Studio</span></a
