--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       </nav>
       <address class="info">
         <ul class="info-list">
-          <li class="link">
-            <a href="mailto:info@devstudio.com" target="_blank"
+          <li>
+            <a href="mailto:info@devstudio.com" target="_blank" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li class="link">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li>
+            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
