--- a/index.html
+++ b/index.html
@@ -83,22 +83,22 @@
       <section class="team">
         <h2 class="main-header-team">Our Team</h2>
         <ul class="team-list">
-          <li>
+          <li class="team-item">
             <img src="./images/Mark.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="header-team">Mark Guerrero</h3>
             <p class="text-team">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/Tom.jpg" alt="Tom Ford" width="264" />
             <h3 class="header-team">Tom Ford</h3>
             <p class="text-team">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/Kamila.jpg" alt="Camila Garcia" width="264" />
+          <li class="team-item">
+            <img src="./images/Camila.jpg" alt="Camila Garcia" width="264" />
             <h3 class="header-team">Camila Garcia</h3>
             <p class="text-team">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/Daniel.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="header-team">Daniel Wilson</h3>
             <p class="text-team">UI Designer</p>
