--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p class="text-team">Frontend Developer</p>
           </li>
           <li class="team-item">
-            <img src="./images/Camila.jpg" alt="Camila Garcia" width="264" />
+            <img src="./images/Kamila.jpg" alt="Camila Garcia" width="264" />
             <h3 class="header-team">Camila Garcia</h3>
             <p class="text-team">Marketing</p>
           </li>
