--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
@@ -20,169 +19,224 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
   </head>
-
   <body>
     <header class="header">
-      <nav>
-        <a href="./index.html" class="nav-logo"
-          >Web<span class="studio">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="info">
-        <ul class="info-list">
-          <li>
-            <a href="mailto:info@devstudio.com" target="_blank" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="navigation-menu">
+          <a href="./index.html" class="nav-logo"
+            >Web<span class="studio">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li><a href="./index.html" class="link">Studio</a></li>
+            <li><a href="" class="link">Portfolio</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="info">
+          <ul class="info-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main class="main">
       <section class="main-section">
-        <h1 class="header-main">Effective Solutions for Your Business</h1>
-        <button class="button-main" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="header-main">Effective Solutions for Your Business</h1>
+          <button class="button-main" type="button">Order Service</button>
+        </div>
       </section>
       <section class="section-features">
-        <h2 class="features">Features</h2>
-        <ul class="features-list">
-          <li>
-            <h3 class="header-features">Strategy</h3>
-            <p class="text-features">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="header-features">Punctuality</h3>
-            <p class="text-features">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="header-features">Diligence</h3>
-            <p class="text-features">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="header-features">Technologies</h3>
-            <p class="text-features">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="features visually-hidden">Особливості</h2>
+          <ul class="features-list">
+            <li class="main-section-list">
+              <h3 class="header-features">Strategy</h3>
+              <p class="text-features">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="main-section-list">
+              <h3 class="header-features">Punctuality</h3>
+              <p class="text-features">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="main-section-list">
+              <h3 class="header-features">Diligence</h3>
+              <p class="text-features">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="main-section-list">
+              <h3 class="header-features">Technologies</h3>
+              <p class="text-features">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="main-header-team">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img src="./images/Mark.jpg" alt="Mark Guerrero" width="264" />
-            <h3 class="header-team">Mark Guerrero</h3>
-            <p class="text-team">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/Tom.jpg" alt="Tom Ford" width="264" />
-            <h3 class="header-team">Tom Ford</h3>
-            <p class="text-team">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/Kamila.jpg" alt="Camila Garcia" width="264" />
-            <h3 class="header-team">Camila Garcia</h3>
-            <p class="text-team">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/Daniel.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="header-team">Daniel Wilson</h3>
-            <p class="text-team">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="main-header-team">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/Mark.jpg"
+                alt="Mark Guerrero, Product Designer"
+                width="264"
+                height="260"
+                class="co-workers"
+              />
+              <div class="description-co-workers">
+                <h3 class="header-team">Mark Guerrero</h3>
+                <p class="text-team">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/Tom.jpg"
+                alt="Tom Ford, Frontend Developer"
+                width="264"
+                height="260"
+                class="co-workers"
+              />
+              <div class="description-co-workers">
+                <h3 class="header-team">Tom Ford</h3>
+                <p class="text-team">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/Kamila.jpg"
+                alt="Camila Garcia, Marketing"
+                width="264"
+                height="260"
+                class="co-workers"
+              />
+              <div class="description-co-workers">
+                <h3 class="header-team">Camila Garcia</h3>
+                <p class="text-team">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/Daniel.jpg"
+                alt="Daniel Wilson, UI Designer"
+                width="264"
+                height="260"
+                class="co-workers"
+              />
+              <div class="description-co-workers">
+                <h3 class="header-team">Daniel Wilson</h3>
+                <p class="text-team">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="portfolio">
-        <h2 class="main-header-portfolio">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="banking">
-            <img
-              src="./images/Banking-App.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="features-header">Banking App</h3>
-            <p class="features-text">App</p>
-          </li>
-          <li class="payment">
-            <img
-              src="./images/Cashless-Payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="features-header">Cashless Payment</h3>
-            <p class="features-text">Marketing</p>
-          </li>
-          <li class="mediation">
-            <img
-              src="./images/Meditation-App.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="features-header">Meditation App</h3>
-            <p class="features-text">App</p>
-          </li>
-          <li class="taxi">
-            <img
-              src="./images/Taxi-Service.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="features-header">Taxi Service</h3>
-            <p class="features-text">Marketing</p>
-          </li>
-          <li class="illustrations">
-            <img
-              src="./images/Screen-Illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="features-header">Screen Illustrations</h3>
-            <p class="features-text">Design</p>
-          </li>
-          <li class="courses">
-            <img
-              src="./images/Online-Courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="features-header">Online Courses</h3>
-            <p class="features-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="main-header-portfolio">Our Portfolio</h2>
+          <ul class="portfolio-list portfolio-card">
+            <li class="portfolio-card-list">
+              <img
+                src="./images/Banking-App.jpg"
+                alt="Banking App Interface"
+                width="360"
+                height="300"
+              />
+              <div class="description-portfolio">
+                <h3 class="features-header">Banking App</h3>
+                <p class="features-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-card-list">
+              <img
+                src="./images/Cashless-Payment.jpg"
+                alt="Cashless Payment System"
+                width="360"
+                height="300"
+              />
+              <div class="description-portfolio">
+                <h3 class="features-header">Cashless Payment</h3>
+                <p class="features-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-card-list">
+              <img
+                src="./images/Meditation-App.jpg"
+                alt="Meditation App Interface"
+                width="360"
+                height="300"
+              />
+              <div class="description-portfolio">
+                <h3 class="features-header">Meditation App</h3>
+                <p class="features-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-card-list">
+              <img
+                src="./images/Taxi-Service.jpg"
+                alt="Taxi Service Dashboard"
+                width="360"
+                height="300"
+              />
+              <div class="description-portfolio">
+                <h3 class="features-header">Taxi Service</h3>
+                <p class="features-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-card-list">
+              <img
+                src="./images/Screen-Illustrations.jpg"
+                alt="Screen Illustrations Design"
+                width="360"
+                height="300"
+              />
+              <div class="description-portfolio">
+                <h3 class="features-header">Screen Illustrations</h3>
+                <p class="features-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-card-list">
+              <img
+                src="./images/Online-Courses.jpg"
+                alt="Online Courses Platform"
+                width="360"
+                height="300"
+              />
+              <div class="description-portfolio">
+                <h3 class="features-header">Online Courses</h3>
+                <p class="features-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="nav-logo"
-        >Web<span class="footer-studio">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="nav-logo"
+          >Web<span class="footer-studio">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
