--- a/index.html
+++ b/index.html
@@ -130,48 +130,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -193,48 +173,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -256,48 +216,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -319,48 +259,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg
-                        class="socials-icon"
-                        width="16"
-                        height="16"
-                        fill="none"
-                      >
+                      <svg class="socials-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
