--- a/index.html
+++ b/index.html
@@ -22,35 +22,33 @@
   <body>
     <header class="header">
       <div class="container">
-        <div>
-          <nav class="navigation-menu">
-            <a href="./index.html" class="nav-logo"
-              >Web<span class="studio">Studio</span></a
-            >
-            <ul class="nav-list">
-              <li>
-                <a href="./index.html" class="link link-studio">Studio</a>
-              </li>
-              <li><a href="" class="link">Portfolio</a></li>
-              <li><a href="" class="link">Contacts</a></li>
-            </ul>
-          </nav>
-          <address class="info">
-            <ul class="info-list">
-              <li>
-                <a href="mailto:info@devstudio.com" class="link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-              </li>
-            </ul>
-          </address>
-        </div>
+        <nav class="navigation-menu">
+          <a href="./index.html" class="nav-logo"
+            >Web<span class="studio">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li>
+              <a href="./index.html" class="link link-studio">Studio</a>
+            </li>
+            <li><a href="" class="link">Portfolio</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="info">
+          <ul class="info-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
-    <main class="main">
+    <main>
       <section class="main-section">
         <div class="container">
           <h1 class="header-main">Effective Solutions for Your Business</h1>
@@ -93,8 +91,8 @@
               </div>
               <h3 class="header-features">Diligence</h3>
               <p class="text-features">
-                Research and confirm brands with the strongest digital growth
-                opportunities and minimize risk.
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
               </p>
             </li>
             <li class="main-section-list">
@@ -119,7 +117,7 @@
             <li class="team-item">
               <img
                 src="./images/Mark.jpg"
-                alt="Mark Guerrero, Product Designer"
+                alt="Photo of Mark Guerrero. He is a Product Designer"
                 width="264"
                 height="260"
                 class="co-workers"
@@ -130,28 +128,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -162,7 +160,7 @@
             <li class="team-item">
               <img
                 src="./images/Tom.jpg"
-                alt="Tom Ford, Frontend Developer"
+                alt="Photo of Tom Ford. He is a Frontend Developer"
                 width="264"
                 height="260"
                 class="co-workers"
@@ -173,28 +171,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -205,7 +203,7 @@
             <li class="team-item">
               <img
                 src="./images/Kamila.jpg"
-                alt="Camila Garcia, Marketing"
+                alt="Photo of Camila Garcia. She is a Marketing Manager"
                 width="264"
                 height="260"
                 class="co-workers"
@@ -216,28 +214,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -248,7 +246,7 @@
             <li class="team-item">
               <img
                 src="./images/Daniel.jpg"
-                alt="Daniel Wilson, UI Designer"
+                alt="Photo of Daniel Wilson. He is a User Interface Designer"
                 width="264"
                 height="260"
                 class="co-workers"
@@ -259,28 +257,28 @@
                 <ul class="team-list-ul">
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-list-li">
                     <a href="/" class="team-social-icon">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="icon-fill" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -300,7 +298,7 @@
                 <img
                   class="portfolio-cards-img"
                   src="./images/Banking-App.jpg"
-                  alt="Banking App Interface"
+                  alt="Picture Banking App."
                   width="360"
                   height="300"
                 />
@@ -320,7 +318,7 @@
                 <img
                   class="portfolio-cards-img"
                   src="./images/Cashless-Payment.jpg"
-                  alt="Cashless Payment System"
+                  alt="Picture Cashless Payment"
                   width="360"
                   height="300"
                 />
@@ -340,7 +338,7 @@
                 <img
                   class="portfolio-cards-img"
                   src="./images/Meditation-App.jpg"
-                  alt="Meditation App Interface"
+                  alt="Picture Meditation App"
                   width="360"
                   height="300"
                 />
@@ -360,7 +358,7 @@
                 <img
                   class="portfolio-cards-img"
                   src="./images/Taxi-Service.jpg"
-                  alt="Taxi Service Dashboard"
+                  alt="Picture Taxi Service"
                   width="360"
                   height="300"
                 />
@@ -380,7 +378,7 @@
                 <img
                   class="portfolio-cards-img"
                   src="./images/Screen-Illustrations.jpg"
-                  alt="Screen Illustrations Design"
+                  alt="Picture Screen Illustrations"
                   width="360"
                   height="300"
                 />
@@ -400,7 +398,7 @@
                 <img
                   class="portfolio-cards-img"
                   src="./images/Online-Courses.jpg"
-                  alt="Online Courses Platform"
+                  alt="Picture Online Courses"
                   width="360"
                   height="300"
                 />
@@ -442,7 +440,7 @@
             </li>
             <li class="footer-social-list">
               <a href="/" class="footer-social-links">
-                <svg class="footer-icon-svg" width="24" height="24" fill="none">
+                <svg class="footer-icon-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
