--- a/index.html
+++ b/index.html
@@ -492,13 +492,13 @@
         <p class="modal-text">Leave your contacts and we will call you back</p>
         <form class="modal-form" autocomplete="off">
           <div class="modal-div">
-            <label for="user_name" class="modal-label">Name</label>
+            <label for="user-name" class="modal-label">Name</label>
             <div class="second-modal-div">
               <input
                 type="text"
                 class="form-input"
                 name="user-name"
-                id="user_name"
+                id="user-name"
               />
               <svg class="svg-card" width="18" height="24">
                 <use href="./images/icons.svg#icon-name"></use>
@@ -506,12 +506,12 @@
             </div>
           </div>
           <div class="modal-div">
-            <label for="phone_number" class="modal-label">Phone</label>
+            <label for="phone-number" class="modal-label">Phone</label>
             <div class="second-modal-div">
               <input
                 type="tel"
                 class="form-input"
-                id="phone_number"
+                id="phone-number"
                 name="user-phone"
               />
               <svg class="svg-card" width="18" height="24">
@@ -520,13 +520,13 @@
             </div>
           </div>
           <div class="modal-div">
-            <label for="user_email" class="modal-label">Email</label>
+            <label for="user-email" class="modal-label">Email</label>
             <div class="second-modal-div">
               <input
                 type="email"
                 name="user-email"
                 class="form-input"
-                id="user_email"
+                id="user-email"
               />
               <svg class="svg-card" width="18" height="24">
                 <use href="./images/icons.svg#icon-mail"></use>
@@ -534,23 +534,16 @@
             </div>
           </div>
           <div class="comment-div">
-            <label for="user_comment" class="modal-label">Comment</label>
+            <label for="user-comment" class="modal-label">Comment</label>
             <textarea
               name="user-comment"
               class="form-textarea"
-              id="user_comment"
+              id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
           <div class="checkbox-conteiner">
-            <input
-              type="checkbox"
-              value="true"
-              class="input-checked visually-hidden"
-              name="user-privacy"
-              id="user_privacy"
-            />
-            <label for="user_privacy" class="checkbox-label">
+            <label for="user-privacy" class="checkbox-label">
               <span class="checkbox-span">
                 <svg class="modal-accept" width="10" height="8">
                   <use href="./images/icons.svg#icon-accept"></use>
@@ -559,6 +552,13 @@
               I accept the terms and conditions of the
               <a class="link-privacy" href="/">Privacy Policy</a>
             </label>
+            <input
+              type="checkbox"
+              value="true"
+              class="input-checked visually-hidden"
+              name="user-privacy"
+              id="user-privacy"
+            />
           </div>
           <button type="submit" class="button-send">Send</button>
         </form>
