Фікси плейхолдерів і чекбокса privacy

--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
                 type="email"
                 name="e-mail"
                 placeholder="E-mail"
+                id="email"
               />
             </label>
             <button class="form-button" type="submit">
