фікси на мобілці, планшеті

--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
             <ul class="mobile-social-list list">
               <li class="mobile-social-item">
                 <a class="mobile-social-link link" href="">
-                  <svg class="mobile-icon" width="16" height="16">
+                  <svg class="mobile-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="mobile-social-item">
                 <a class="mobile-social-link link" href="">
-                  <svg class="mobile-icon" width="16" height="16">
+                  <svg class="mobile-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="mobile-social-item">
                 <a class="mobile-social-link link" href="">
-                  <svg class="mobile-icon" width="16" height="16">
+                  <svg class="mobile-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="mobile-social-item">
                 <a class="mobile-social-link link" href="">
-                  <svg class="mobile-icon" width="16" height="16">
+                  <svg class="mobile-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -209,11 +209,11 @@
       <section class="team">
         <div class="container">
           <h2 class="main-header-team team-list-title">Our Team</h2>
-          <ul class="team-list team-item">
+          <ul class="team-list">
             <li class="team-item team-photo">
               <img
                 class="co-workers team-list-photo"
-                srcset="./images/TEAM/mark-guerrero-2x.jpg"
+                srcset="./images/TEAM/mark-guerrero-2x.jpg 2x"
                 src="./images/TEAM/mark-guerrero-1x.jpg"
                 width="264"
                 alt="Photo of Mark Guerrero. He is a Product Designer"
@@ -301,7 +301,7 @@
             <li class="team-item team-photo">
               <img
                 class="co-workers team-list-photo"
-                srcset="./images/TEAM/camila-garcia-2x.jpg"
+                srcset="./images/TEAM/camila-garcia-2x.jpg 2x"
                 src="./images/TEAM/camila-garcia-1x.jpg"
                 width="264"
                 alt="Photo of Camila Garcia. She is a Marketing Manager"
@@ -346,7 +346,7 @@
             <li class="team-item team-photo">
               <img
                 class="co-workers team-list-photo"
-                srcset="./images/TEAM/daniel-wilson-2x.jpg"
+                srcset="./images/TEAM/daniel-wilson-2x.jpg 2x"
                 src="./images/TEAM/daniel-wilson-1x.jpg"
                 width="264"
                 alt="Photo of Daniel Wilson. He is a User Interface Designer"
@@ -399,7 +399,7 @@
               <div class="div-overlay">
                 <img
                   class="portfolio-cards-img"
-                  srcset="./images/PORTFOLIO/bankapp-desktop-2x.jpg"
+                  srcset="./images/PORTFOLIO/bankapp-desktop-2x.jpg 2x"
                   src="./images/PORTFOLIO/bankapp-desktop-1x.jpg"
                   alt="Picture Banking App."
                   width="360"
@@ -422,7 +422,7 @@
               <div class="div-overlay">
                 <img
                   class="portfolio-cards-img"
-                  srcset="./images/PORTFOLIO/payment-desktop-2x.jpg"
+                  srcset="./images/PORTFOLIO/payment-desktop-2x.jpg 2x"
                   src="./images/PORTFOLIO/payment-desktop-1x.jpg"
                   alt="Picture Cashless Payment"
                   width="360"
@@ -445,7 +445,7 @@
               <div class="div-overlay">
                 <img
                   class="portfolio-cards-img"
-                  srcset="./images/PORTFOLIO/meditation-desktop-2x.jpg"
+                  srcset="./images/PORTFOLIO/meditation-desktop-2x.jpg 2x"
                   src="./images/PORTFOLIO/meditation-desktop-1x.jpg"
                   alt="Picture Meditation App"
                   width="360"
@@ -468,7 +468,7 @@
               <div class="div-overlay">
                 <img
                   class="portfolio-cards-img"
-                  srcset="./images/PORTFOLIO/taxi-desktop-2x.jpg"
+                  srcset="./images/PORTFOLIO/taxi-desktop-2x.jpg 2x"
                   src="./images/PORTFOLIO/taxi-desktop-1x.jpg"
                   alt="Picture Taxi Service"
                   width="360"
@@ -491,7 +491,7 @@
               <div class="div-overlay">
                 <img
                   class="portfolio-cards-img"
-                  srcset="./images/PORTFOLIO/screen-desktop-2x.jpg"
+                  srcset="./images/PORTFOLIO/screen-desktop-2x.jpg 2x"
                   src="./images/PORTFOLIO/screen-desktop-1x.jpg"
                   alt="Picture Screen Illustrations"
                   width="360"
@@ -514,7 +514,7 @@
               <div class="div-overlay">
                 <img
                   class="portfolio-cards-img"
-                  srcset="./images/PORTFOLIO/courses-desktop-2x.jpg"
+                  srcset="./images/PORTFOLIO/courses-desktop-2x.jpg 2x"
                   src="./images/PORTFOLIO/courses-desktop-1x.jpg"
                   alt="Picture Online Courses"
                   width="360"
